# WolframImportX

./: .gitignore  Cargo.toml  Readme.md  package.json
.github/workflows/: rust.yml
MacOSX-x86-64/: libximport.dylib  readme.md
Windows-x86-64/: readme.md
projects/wolfram-bind/: Binding.m  PacletInfo.m  bind.m
projects/wolfram-bind/Kernel/: init.m
projects/wolfram-bind/tests/: test.json5  test.m  test.toml  test.yaml
projects/wolfram-import/: Cargo.toml
projects/wolfram-import/src/: errors.rs  lib.rs
projects/wolfram-import/src/serder/: builtin.rs  json.rs  mod.rs  svg.rs  toml.rs  yaml.rs
