[package]
name = "wolfram-import"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
wolfram-library-link = "0.2.2"
serde_yaml = "0.8.23"
toml = "0.5.8"
json5 = "0.4.1"

[dev-dependencies]

[features]
default = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
