[package]
name = "wolfram-import"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[lib]
name = "ximport"
crate-type = ["cdylib"]

[dependencies]
wolfram-library-link = "0.2.5"
serde_yaml = "0.8.24"
serde_json = "1.0.81"
toml = "0.5.9"
json5 = "0.4.1"
usvg = "0.23.0"
resvg = "0.23.0"



[dev-dependencies]

[features]
default = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
